Design Challenge Day 2
I fixed the circles and added borders around them. I also added the
button with the chevron in it. Also created the “image” box.

--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
 	<div id= "top"</div>
 		<h3>spacer</h3>
 		<h1 id="header" class="header">Yukio Yamamoto</h1>
-		<h2 id ="headers"class="header">Software Developer</h2>
+		<h2 id ="headers" class="header">Software Developer</h2>
 		<div class="circle" id="circle-right"></div>
 		<div class="circle" id="circle-center"></div>
 		<div class="circle" id="circle-left"></div>
+		<div id="little-circle"> <img src="assets/chevron.png" id="chevron"></div>
 	</div>
-	<div id="bottom"></div>
-		<div id="little-circle"></div>
-	</div>
+	<div id="text"></div>
 
 </body>
 </html>
